# puz.rs

./: .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Nov2493.puz  PUZ.md  README.md  RELEASING.md  justfile  organization.md  puz.md  release.toml  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  publish.yml  release.yml
cli/: Cargo.toml  README.md
cli/src/: dump.rs  inspect.rs  main.rs  render.rs
cli/src/commands/: dump.rs  export.rs  inspect.rs  mod.rs  parse_json.rs  validate.rs
examples/: read-with-file.rs
examples/data/: circled2.puz  circled3.puz  misc.puz  misc1.puz  rebus1.puz
parse/: Cargo.toml  README.md
parse/benches/: fixtures.rs  parse.rs
parse/examples/: basic_usage.rs  inspect_grid.rs  inspect_sections.rs  read-with-file.rs  validate_dir.rs
parse/examples/data/: circled.puz  rebus.puz  standard2.puz
parse/src/: checksums.rs  encoding.rs  error.rs  grid.rs  lib.rs  puzzle.rs  raw.rs  types.rs
parse/src/parser/: clues.rs  extensions.rs  grids.rs  header.rs  io.rs  mod.rs  strings.rs  validation.rs
parse/src/writer/: checksums.rs  clues.rs  extensions.rs  grids.rs  header.rs  mod.rs  strings.rs
src/: error.rs  lib.rs  main.rs  parse.rs  play.rs  processor.rs  reader.rs  types.rs
src/parser/: clues.rs  extensions.rs  grids.rs  header.rs  io.rs  mod.rs  strings.rs  validation.rs
