[workspace]
members = ["parse", "cli"]
resolver = "2"

[workspace.dependencies]
# Only genuinely shared dependencies live here. serde is used by both the
# library (optional, behind the `json` feature) and the CLI. Single-consumer
# dependencies are declared directly in the crate that uses them.
serde = { version = "1.0.210", features = ["derive"] }

[profile.release]
lto = true
opt-level = 's'
