[workspace]
members = ["parse", "cli"]
resolver = "2"

[workspace.package]
version = "0.1.3"
authors = ["mwln"]
edition = "2021"
license = "MIT"
repository = "https://github.com/mwln/puz.rs"
rust-version = "1.78.0"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }

# Only shared dependencies; single-consumer deps live in their own crate.
[workspace.dependencies]
serde = { version = "1.0.210", features = ["derive"] }

[profile.release]
lto = true
opt-level = 's'
