[package]
name = "puz"
version = "0.1.3"
edition = "2021"
description = "Command line application for processing and interacting with .puz crossword puzzle files"
license = "MIT"
homepage = "https://github.com/mwln/puz.rs/tree/main/cli"
repository = "https://github.com/mwln/puz.rs"
rust-version = "1.78.0"

[[bin]]
name = "puz"
path = "src/main.rs"

[dependencies]
puz-parse = { version = "0.1.3", path = "../parse", features = ["json"] }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
