[package]
name = "puz"
version = "0.1.3"
edition = "2021"
description = "Command line application for processing and interacting with .puz crossword puzzle files"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mwln/puz.rs/tree/main/cli"
repository = "https://github.com/mwln/puz.rs"
documentation = "https://github.com/mwln/puz.rs/blob/main/cli/README.md"
keywords = ["crossword", "puz", "puzzle", "cli", "json"]
categories = ["command-line-utilities", "games"]
rust-version = "1.78.0"

[[bin]]
name = "puz"
path = "src/main.rs"

[dependencies]
puz-parse = { version = "0.1.3", path = "../parse", features = ["json"] }
clap = { version = "4.0", features = ["derive", "cargo"] }
serde = { workspace = true }
serde_json = "1.0.128"
anyhow = "1.0.75"
