[package]
name = "puz"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Command line application for processing and interacting with .puz crossword puzzle files"
readme = "README.md"
homepage = "https://github.com/mwln/puz.rs/tree/main/cli"
documentation = "https://github.com/mwln/puz.rs/blob/main/cli/README.md"
keywords = ["crossword", "puz", "puzzle", "cli", "json"]
categories = ["command-line-utilities", "games"]

[[bin]]
name = "puz"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
puz-parse = { version = "0.1.3", path = "../parse", features = ["json"] }
clap = { version = "4.0", features = ["derive", "cargo"] }
serde = { workspace = true }
serde_json = "1.0.128"
anyhow = "1.0.75"
comfy-table = "7.2"
owo-colors = { version = "4.3", features = ["supports-colors"] }
