[package]
name = "puz-parse"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "A Rust library for parsing .puz crossword puzzle files"
readme = "README.md"
homepage = "https://github.com/mwln/puz.rs"
documentation = "https://docs.rs/puz-parse"
keywords = ["crossword", "parser", "puz", "puzzle", "binary-format"]
categories = ["parser-implementations", "encoding", "games"]
exclude = [
    "examples/data/*.puz",
    "target/",
    ".git/",
]

[lib]
name = "puz_parse"

[lints]
workspace = true

[dependencies]
byteorder = "1.4.3"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "parse"
harness = false

[features]
default = []
json = ["serde"]

[dependencies.serde]
workspace = true
optional = true
