[package]
name = "puz-parse"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
# The library itself only needs edition 2024 (Rust 1.85). The workspace
# rust-version (1.88) is driven by the CLI's `comfy-table` dependency and does
# not apply to this crate, so consumers of `puz-parse` keep the lower MSRV.
rust-version = "1.85.0"
description = "A Rust library for parsing .puz crossword puzzle files"
readme = "README.md"
homepage = "https://github.com/mwln/puz.rs"
documentation = "https://docs.rs/puz-parse"
keywords = ["crossword", "parser", "puz", "puzzle", "binary-format"]
categories = ["parser-implementations", "encoding", "games"]
autobenches = false
exclude = [
    "benches/",
    "examples/data/*.puz",
    "target/",
    ".git/",
]

[lib]
name = "puz_parse"

[lints]
workspace = true

[dependencies]
byteorder = "1.4.3"
thiserror = "2.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "parse"
harness = false

[features]
default = []
json = ["serde"]

[dependencies.serde]
workspace = true
optional = true
